2002-08-05  Gary Thomas  <gary@chez-thomas.org>
2002-08-05  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>	

	* include/arch.inc: hal_fpu_load regs was not loading registers!

2002-04-29  Jonathan Larmour  <jlarmour@redhat.com>

	* src/vectors.S:
	Don't use .file as it can confuse debugging since the .file
	doesn't contain the path and therefore the debugger will never
	know where it lives! This conflicts with using -Wa,--gstabs.

2002-04-25  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ppc_stub.c (__computeSignal): Only handle ITLB/DTLB MISS if
	defined by platform.

2002-04-24  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>
2002-04-24  Jonathan Larmour  <jlarmour@redhat.com>

	* include/hal_arch.h (HAL_SavedRegisters): Add FP regs.
	* include/arch.inc: Add FPU register names.
	Implement hal_fpu_save and hal_fpu_load.
	* src/context.S: save/restore FP regs.
	* src/hal_mk_defs.c (main): Export CYGARC_JMPBUF_F* for FPU regs.
	* src/ppc_stub.c (__computeSignal): SW_EMUL is support by 5xx.
	ITLB and DTLB MISS only supported by 8xx.
	* cdl/hal_powerpc.cdl (CYGHWR_HAL_POWERPC_VECTOR_BASE): Take
	CYGHWR_HAL_POWERPC_FORCE_VECTOR_BASE_LOW into account.

2002-04-11  Gary Thomas  <gthomas@redhat.com>

	* src/hal_misc.c (hal_enable_caches): Chance cache handling & setup to
	be controlled by common CDL (like other platforms/architectures).

	* src/hal_intr.c (hal_delay_us): Didn't work if there are less than
	one decrementer tick per micro-second.  Used a calculation that seems
	to work no matter how the decrementer is configured.

2002-04-08  Gary Thomas  <gthomas@redhat.com>

	* src/vectors.S (_hal_hardware_init_done): Can't copy vectors until
	DRAM is setup (like the comment said all along).

2002-03-08  Gary Thomas  <gthomas@redhat.com>

	* src/vectors.S (_hal_hardware_init_done): New label - used by
	ROMRAM code to figure out relative addressing.

2002-01-23  Gary Thomas  <gthomas@redhat.com>

	* src/hal_mk_defs.c (main): Clean up compile warning.
