@@ -304,11 +304,24 @@ hal_enable_caches(void)
 #endif
 
 #ifdef CYGSEM_HAL_ENABLE_ICACHE_ON_STARTUP
+#ifdef HAL_ICACHE_UNLOCK_ALL
+    HAL_ICACHE_UNLOCK_ALL();
+#endif
     HAL_ICACHE_ENABLE();
 #endif
 
 #ifdef CYGSEM_HAL_ENABLE_DCACHE_ON_STARTUP
+#ifdef HAL_DCACHE_UNLOCK_ALL
+    HAL_DCACHE_UNLOCK_ALL();
+#endif
     HAL_DCACHE_ENABLE();
+#ifdef HAL_DCACHE_WRITE_MODE
+#ifdef CYGSEM_HAL_DCACHE_STARTUP_MODE_COPYBACK
+    HAL_DCACHE_WRITE_MODE(HAL_DCACHE_WRITEBACK_MODE);
+#else
+    HAL_DCACHE_WRITE_MODE(HAL_DCACHE_WRITETHRU_MODE);
+#endif
+#endif
 #endif
 }
 
