@@ -1,3 +1,8 @@
+2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>
+
+	* include/var_cache.h (HAL_DCACHE_WRITE_MODE): Define for support
+	of various modes (copyback/writethru)
+
 2002-06-27  Gary Thomas  <gary@chez-thomas.org>
 
 	* include/var_regs.h: Allow platform to override certain assumptions,
