@@ -1,3 +1,8 @@
+2002-11-13  Gary Thomas  <gthomas@ecoscentric.com>
+
+	* src/hal_misc.c (hal_enable_caches): Support new CDL options for
+	how [mode] to enable DATA cache.
+
 2002-08-05  Gary Thomas  <gary@chez-thomas.org>
 2002-08-05  Bob Koninckx <bob.koninckx@mech.kuleuven.ac.be>	
 
